[gd_scene load_steps=3 format=3 uid="uid://dynd43xihgas1"]

[ext_resource type="Script" uid="uid://dfsgau6vnlwjm" path="res://scripts/ui/escape_menu.gd" id="1_vscpt"]
[ext_resource type="Theme" uid="uid://ymoxu6tkn4db" path="res://resources/ui_theme.tres" id="2_y5i2k"]

[node name="Escape menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vscpt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -31.5
offset_right = 28.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_y5i2k")
theme_override_font_sizes/font_size = 64
text = "Paused"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"
